--- a/ext/flowable/src/main/resources/org/apache/syncope/client/enduser/pages/Flowable_pt_BR.properties
+++ b/ext/flowable/src/main/resources/org/apache/syncope/client/enduser/pages/Flowable_pt_BR.properties
@@ -20,3 +20,4 @@ executionId=Execution ID
 startTime=Hora de in\u00edcio
 delete=Limpa
 start=Come\u00e7ar
+requests.to.be.approved=Seus pedidos ativos
