#7 fix user request

--- a/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_it.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_it.properties
@@ -89,3 +89,7 @@ attributes.plain=Plain Attributes
 attributes.virtual=Virtual Attributes
 captcha=Captcha
 details=Details
+user-requests-link=User Requests
+self-pwd-reset-link=Self Password Reset
+self-registration-link=Self Registration
+user_request_error=Errore durante la richiesta. Si prega di contattare l'amministratore di sistema.
