--- a/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_pt_BR.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_pt_BR.properties
@@ -88,3 +88,7 @@ attributes.plain=Plain Attributes
 attributes.virtual=Virtual Attributes
 captcha=Captcha
 details=Details
+user-requests-link=User Requests
+self-pwd-reset-link=Self Password Reset
+self-registration-link=Self Registration
+user_request_error=Erro durante a solicita\u00e7\u00e3o do usu\u00e1rio. Por favor contacte o seu administrador
