--- a/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_ru.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_ru.properties
@@ -87,3 +87,7 @@ attributes.plain=Plain Attributes
 attributes.virtual=Virtual Attributes
 captcha=Captcha
 details=Details
+user-requests-link=User Requests
+self-pwd-reset-link=Self Password Reset
+self-registration-link=Self Registration
+user_request_error=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u0438 \u0437\u0430\u043f\u0440\u043e\u0441\u0435 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f. \u041e\u0431\u0440\u0430\u0442\u0438\u0442\u0435\u0441\u044c \u043a \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u0443
