#11 Fix login and labels

--- a/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_it.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_it.properties
@@ -93,3 +93,13 @@ user-requests-link=User Requests
 self-pwd-reset-link=Self Password Reset
 self-registration-link=Self Registration
 user_request_error=Errore durante la richiesta. Si prega di contattare l'amministratore di sistema.
+
+page.home=Home
+page.changePassword=Cambio Password
+page.editSecurityQuestion=Modifica domanda segreta
+page.edituser=Modifica profilo
+page.confirmPasswordReset=Conferma Reset Password
+page.selfPwdReset=Password Reset
+page.selfRegistration=Self Registration
+page.resultPage=Summary
+page.userRequests=User Requests
