--- a/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_ja.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_ja.properties
@@ -90,3 +90,13 @@ user-requests-link=User Requests
 self-pwd-reset-link=Self Password Reset
 self-registration-link=Self Registration
 user_request_error=\u30e6\u30fc\u30b6\u30fc\u30ea\u30af\u30a8\u30b9\u30c8\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002 \u7ba1\u7406\u8005\u306b\u9023\u7d61\u3057\u3066\u304f\u3060\u3055\u3044
+
+page.home=Home
+page.changePassword=Change Password
+page.editSecurityQuestion=Edit Security Question
+page.edituser=Edit User
+page.confirmPasswordReset=Confirm Password Reset
+page.selfPwdReset=Password Reset
+page.selfRegistration=Registration
+page.resultPage=Summary
+page.userRequests=User Requests
