--- a/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_pt_BR.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/SyncopeEnduserApplication_pt_BR.properties
@@ -92,3 +92,13 @@ user-requests-link=User Requests
 self-pwd-reset-link=Self Password Reset
 self-registration-link=Self Registration
 user_request_error=Erro durante a solicita\u00e7\u00e3o do usu\u00e1rio. Por favor contacte o seu administrador
+
+page.home=Home
+page.changePassword=Change Password
+page.editSecurityQuestion=Edit Security Question
+page.edituser=Edit User
+page.confirmPasswordReset=Confirm Password Reset
+page.selfPwdReset=Password Reset
+page.selfRegistration=Registration
+page.resultPage=Summary
+page.userRequests=User Requests
