manage ProvisioningResult and return error on propagation failure, closes #20

--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/EditChangePassword_it.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/EditChangePassword_it.properties
@@ -22,5 +22,5 @@ self.pwd.change.success.msg=Password aggiornata con successo
 
 Cancel=Annulla
 self.pwd.change.error=Errore durante il cambio password
-self.pwd.change.error.msg=Si prega di contattare 
+self.pwd.change.error.msg=Si prega di contattare l'amministratore di sistema.
 self.pwd.change.success=Aggiornamento avvenuto con successo
