--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/EditSecurityQuestion_it.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/EditSecurityQuestion_it.properties
@@ -18,5 +18,5 @@ submit=Cambia
 cancel=Annulla
 self.securityquestion.change.success=Aggiornamento avvenuto con successo
 self.securityquestion.change.error=Errore durante il cambio della domanda di sicurezza
-self.securityquestion.change.error.msg=Si prega di contattare 
+self.securityquestion.change.error.msg=Si prega di contattare l'amministratore di sistema.
 self.securityquestion.change.success.msg=Aggiornamento della domanda di sicurezza avvenuto con successo
