--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/MustChangePassword_it.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/MustChangePassword_it.properties
@@ -23,4 +23,4 @@ self.pwd.change.success=Password aggiornata con successo
 
 Cancel=Annulla
 self.pwd.change.error=Errore durante il cambio password
-self.pwd.change.error.msg=Si prega di contattare 
+self.pwd.change.error.msg=Si prega di contattare l'amministratore di sistema.
