--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfConfirmPasswordReset_it.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfConfirmPasswordReset_it.properties
@@ -24,4 +24,4 @@ self.confirm.pwd.reset.success.msg=Cambio password eseguito con successo
 self.confirm.pwd.reset.error.empty=Nessun token \u00e8 specificato nell'url, non \u00e8 possibile accedere alla pagina richiesta
 
 self.confirm.pwd.reset.error=Errore durante il processo di reset password
-self.confirm.pwd.reset.error.msg=Si prega di contattare 
+self.confirm.pwd.reset.error.msg=Si prega di contattare l'amministratore di sistema.
