--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfResult_it.properties
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfResult_it.properties
@@ -13,4 +13,4 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 #
-login=Back to Home
+login=Torna alla Home
